syntax = "proto3";

package tool_cluster.v4;

import "shared_service_instance.proto";

service ServiceManager {
  rpc DebugAccess(DebugServiceAccessRequest) returns (DebugServiceAccessResponse);
}

/**
 * Контракт запроса для rpc DebugAccess
 */
message DebugServiceAccessRequest {
  oneof address {
    // URI сервиса.
    string uri = 2;
    // Адрес и порт сервиса.
    AddressPort address_port = 3;
  }
  // Протокол сервиса
  ServiceProtocol protocol = 4;
}

/**
 * Контракт ответа для rpc DebugAccess
 */
message DebugServiceAccessResponse {
  // Результат проверки
  DebugAccessResult result = 1;
}
