syntax = "proto3";

package tool_cluster.v4;

message AddressPort {
  // адрес.
  string address = 1;
  // Порт.
  int32 port = 2;
}

enum ServiceProtocol{
  // Невалидное значение.
  SERVICE_PROTOCOL_STATE_UNSPECIFIED = 0;
  // Протокол TCP.
  SERVICE_PROTOCOL_TCP = 1;
  // Протокол UDP.
  SERVICE_PROTOCOL_UDP = 2;
  // Протокол WS.
  SERVICE_PROTOCOL_WS = 3;
  // Протокол HTTP.
  SERVICE_PROTOCOL_HTTP = 4;
  // Протокол GRPC.
  SERVICE_PROTOCOL_GRPC = 5;
}

message DebugAccessResult { 
  // Адрес сервиса.
  string address = 1;
  // Состояние доступности сервиса.
  ServiceAvailableState state = 2;
}

enum ServiceAvailableState {
  // Невалидное значение.
  SERVICE_AVAILABLE_STATE_UNSPECIFIED = 0;
  // Сервис доступен.
  SERVICE_AVAILABLE_STATE_AVAILABLE = 1;
  // Сервис недоступен.
  SERVICE_AVAILABLE_STATE_UNAVAILABLE = 2;
}
